--- a/src/index.scss
+++ b/src/index.scss
@@ -5,9 +5,26 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #1D1D1D;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+section {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  min-height: 100vh;
+}
+
+footer {
+  background-color: #161616;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
