--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -2,6 +2,10 @@
     padding-left: 2em;
     padding-right: 2em;
 
+    h1 {
+        font-size: 50px;
+    }
+
     .grid {
         display: grid;
         grid-template-columns: repeat(3,1fr);
@@ -11,7 +15,7 @@
     h2 {
         font-size: 20px;
         margin: 0 !important;
-        padding: 0;
+        padding: 10px 0 0 0 ;
     }
 
     .item-grid {
@@ -44,6 +48,14 @@
                 content: ", ";
             }
             
+            li:after {
+                content: ", ";
+            }
+            
+            li:nth-last-child(2):after {
+                content: " y ";  
+            }
+
             li:last-child:after {
                 content: ".";
             }
