--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -8,6 +8,7 @@
 
     .grid {
         display: grid;
+        padding: 35px 0 35px 0;
         grid-template-columns: repeat(3,1fr);
         justify-content: center;
     }
@@ -21,10 +22,11 @@
     .item-grid {
         width: 100%;
         display: flex;
-        padding: 3em 5em 3em 2em;
         flex-direction: column;
         justify-content: center;
-        
+        align-items: center;
+        padding-bottom: 35px;
+
         .front {
             width: 100%;
             display: flex;
@@ -34,11 +36,11 @@
         }
 
         .list {
-            display: inline-flex;
+            display: inline-block;
             list-style: none;
             justify-content: center;
             align-items: center;
-            
+
             li {
                 display: inline;
                 padding-right: 5px;
@@ -59,6 +61,7 @@
             li:last-child:after {
                 content: ".";
             }
+
         }
 
         img {
@@ -67,3 +70,32 @@
     }
 }
 
+@media screen and (max-width:768px) {
+    #skills {
+        .grid {
+            grid-template-columns: repeat(2,1fr);
+        }
+
+        .item-grid {
+            padding-top: 35px;
+        }
+    }
+}
+
+@media screen and (max-width:540px) {
+    #skills {
+
+        h1 {
+            font-size: 35px;
+        }
+
+
+        .grid {
+            grid-template-columns: repeat(1,1fr);
+
+            .item-grid {
+                padding-top: 35px;
+            }
+        }
+    }
+}
