--- a/src/Components/Projects/Projects.scss
+++ b/src/Components/Projects/Projects.scss
@@ -1,38 +1,62 @@
 #projects {
-    
+  
+  h1 {
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    height: 400px;
+  }
+
   .cell {
     width: 100%;
     height: 100%;
     font-size: 25px;
-    background-color: gray;
-
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 20px;
+    
     .logo {
       width: 40%;
     }
   }
-  
-  .default {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    padding: 20px;
-  }
 
-  .default:hover {
+  .cell:hover{
     cursor: pointer;
   }
-  
-  .details {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background: black;
+
+}
+
+@media screen and (max-width:768px) {
+  #projects {
+      .grid {
+          grid-template-columns: repeat(2,1fr);
+      }
   }
-  
-  
+}
+
+@media screen and (max-width:540px) {
+  #projects {
+
+      h1 {
+          font-size: 30px;
+          text-align: center;
+      }
+
+      .grid {
+          grid-template-columns: repeat(1,1fr);
+      }
+
+      .cell {
+        .logo {
+          width: 65%;
+        }
+      }
+  }
 }
