--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -86,7 +86,8 @@
     #skills {
 
         h1 {
-            font-size: 35px;
+            font-size: 30px;
+            text-align: center;
         }
 
 
