--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -1,4 +1,68 @@
 #project-detail {
-    background-color: black;
+    background: #1D1D1D;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+    top: 0;
+    left: 0;
+    position: fixed;
 
+    .title {
+        padding: 1em;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        img {
+            width: 10%;
+        }
+    }
+
+    .close-btn {
+        background-color: transparent;
+        border: none;
+    }
+
+    .close-btn:hover {
+        cursor: pointer;
+    }
+
+    .container {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+        height: 100%;
+
+        .images {
+            width: 50%;
+        }
+
+        .info {
+            width: 50%;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            
+            p {
+                text-align: justify;
+            }
+
+            a .icon {
+                margin-right: 5px;
+            }
+        }
+
+    }
+
+    .credentials {
+        padding-bottom: 5px;
+        p {
+            margin: 0;
+            padding: 0;
+        }
+
+    }
+
+    .credentials:first-child {
+        font-style: italic;
+    }
 }
