--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
+    overflow-y: auto;
 
     .title {
         padding: 1em;
@@ -13,7 +14,7 @@
         justify-content: space-between;
         align-items: center;
         img {
-            width: 10%;
+            width: 15%;
         }
     }
 
@@ -32,7 +33,7 @@
         width: 100%;
         height: 100%;
 
-        .images {
+        .images-container {
             width: 50%;
             display: flex;
             justify-content: center;
@@ -68,5 +69,48 @@
 
     .credentials:first-child {
         font-style: italic;
+    }
+}
+
+
+@media screen and (max-width:768px) {
+    #project-detail {
+
+        .title {
+            img {
+                width: 30%;
+            }
+        }
+
+        .container {
+            flex-direction: column;
+
+            .images-container {
+                width: 100%;
+            }
+
+            .info {
+                width: 100%  !important;
+                padding-bottom: 2em;
+
+                h2 {
+                    font-size: 35px;
+                }
+            }
+        }
+    }
+  }
+
+
+  
+
+@media screen and (max-width:426px) {
+    #project-detail {
+
+        .title {
+            img {
+                width: 50%;
+            }
+        }
     }
 }
