--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
-    overflow-y: auto;
+    //overflow-y: auto;
 
     .title {
         padding: 1em;
@@ -36,9 +36,10 @@
         .images-container {
             width: 50%;
             display: flex;
-            justify-content: center;
-            padding: 20px;
-            padding-top: 5em;
+            padding: 15px;
+            img {
+                width: 100%;
+            }
         }
 
         .info {
@@ -53,6 +54,10 @@
 
             a .icon {
                 margin-right: 5px;
+            }
+
+            a:hover {
+                color: white !important;
             }
         }
 
