--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -45,6 +45,7 @@
         .info {
             width: 50%;
             padding: 20px;
+            padding-top: 3em;
             display: flex;
             flex-direction: column;
             
