--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -1,13 +1,32 @@
 
 #message {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    background-color: black;
+    position: relative;
+
+    .background {
+        width: 100%;
+        height: 100%;
+    }
+
+    .container-message {
+        background-color: transparent;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        top: 0;
+    }
+
 }
 
-#message > div {
+
+
+
+.message {
     width: 60%;
     font-size: 24px;
     line-height: 29px;
