--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -1,6 +1,6 @@
 
 #message {
-    background-color: black;
+    background-color: #171717;
     position: relative;
 
     .background {
@@ -45,4 +45,23 @@
 .signature h3 {
     transform: rotate(-15deg);
     padding-right: 15px;
+}
+
+@media screen and (max-width:505px) {
+
+    #message {
+        
+        .background {
+            width: 100%;
+            height: 100vh;
+        }
+
+        .message {
+            width: 100%;
+            font-size: 18px;
+            padding-left: 2em;
+            padding-right: 2em;
+        }
+    }
+    
 }
