--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -8,9 +8,10 @@
 
     .grid {
         display: grid;
-        padding: 35px 0 35px 0;
+        padding: 35px 10em 35px 10em;
         grid-template-columns: repeat(3,1fr);
         justify-content: center;
+        grid-gap: 1em;
     }
 
     h2 {
@@ -70,10 +71,19 @@
     }
 }
 
+@media screen and (max-width:1024px) {
+    #skills {
+        .grid {
+            padding: 0 35px 0 35px;
+        }
+    }
+}
+
 @media screen and (max-width:768px) {
     #skills {
         .grid {
             grid-template-columns: repeat(2,1fr);
+            padding: 0 15px 0 15px;
         }
 
         .item-grid {
@@ -93,6 +103,7 @@
 
         .grid {
             grid-template-columns: repeat(1,1fr);
+            padding: 0;
 
             .item-grid {
                 padding-top: 35px;
