--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -53,19 +53,52 @@ footer {
 }
 
 
-@media screen and (max-width:863px) {
+@media screen and (max-width:575px) {
     #footer {
         flex-direction: column;
 
         .footer-right {
-            width: 100%;
-            padding-left: 2em;
+            padding-left: 6em;
             padding-right: 2em;
+            flex-direction: column;
+            align-items: flex-start;
 
             h3 {
                 font-size: 25px;
-                width: 100%;
-                text-align: center;
+            }
+
+            .item {
+                flex-direction: row;
+            }
+
+            .item .info {
+                visibility: visible;
+                padding-left: 1em;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:320px) {
+    #footer {
+        .footer-right {
+            padding-left: 2em;
+            padding-right: 2em;
+            flex-direction: column;
+            align-items: center;
+
+            h3 {
+                font-size: 25px;
+            }
+
+            .item {
+                flex-direction: column;
+            }
+
+            .item .info {
+                visibility: visible;
+                padding: 0;
+                padding-top: 1em;
             }
         }
     }
