--- a/src/Components/Start/Start.scss
+++ b/src/Components/Start/Start.scss
@@ -8,10 +8,11 @@
     align-items: center;
 
     /* Create the parallax scrolling effect */
-   /* background-attachment: fixed;
+    background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;*/
+    background-size: cover;
+
 
     h1 {
         font-size: 50px;
@@ -21,23 +22,37 @@
         padding: 0;
     }
 
+
+
 }
 
 #home > div {
     padding: 50px;
 }
 
+@media screen and (max-width: 768px) {
+    
+    #home {
+        justify-content: center;
+        .container-name {
+            background-color: white;
+             h1 {
+                 font-size: 30px;
+             }
+        }
+    }
+}
+
 @media screen and (max-width:360px) { 
     #home > div {
         padding: 50px 10px 50px 15px;
     }
+
 }
 
-/*
+
 @media only screen and (max-device-width: 1366px) {
   .parallax {
     background-attachment: scroll;
   }
 }
-
-*/
