--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -2,10 +2,12 @@
 #message {
     background-color: #171717;
     position: relative;
+    overflow: hidden;
 
     .background {
         width: 100%;
         height: 100%;
+        overflow: hidden;
     }
 
     .container-message {
@@ -19,6 +21,7 @@
         justify-content: center;
         position: absolute;
         top: 0;
+        overflow: hidden;
     }
 
 }
