--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -8,7 +8,7 @@
 
     .grid {
         display: grid;
-        padding: 35px 10em 35px 10em;
+        padding: 35px 10em 0 10em;
         grid-template-columns: repeat(3,1fr);
         justify-content: center;
         grid-gap: 1em;
@@ -66,7 +66,7 @@
         }
 
         img {
-            width: 40%;
+            width: 30%;
         }
     }
 }
