--- a/src/Components/Start/Start.scss
+++ b/src/Components/Start/Start.scss
@@ -34,6 +34,11 @@
     
     #home {
         justify-content: center;
+
+        .image-arrow {
+            display: none;
+        }
+
         .container-name {
             background-color: white;
              h1 {
