--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -6,6 +6,7 @@
     top: 0;
     left: 0;
     position: fixed;
+    overflow: hidden;
 
     .animate__animated.animate__zoomOut,
     .animate__animated.animate__zoomIn {
