--- a/src/Components/Message/Message.scss
+++ b/src/Components/Message/Message.scss
@@ -4,13 +4,12 @@
     position: relative;
     overflow: hidden;
 
-    .background {
+    .canvas-particles {
         width: 100%;
-        height: 100%;
-        overflow: hidden;
+        height: 100vh;
     }
 
-    .container-message {
+    .message-container {
         background-color: transparent;
         width: 100%;
         height: 100%;
@@ -23,11 +22,7 @@
         top: 0;
         overflow: hidden;
     }
-
 }
-
-
-
 
 .message {
     width: 60%;
@@ -35,19 +30,6 @@
     line-height: 29px;
     text-align: center;
     letter-spacing: 0.095em;
-}
-
-.signature {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    font-family: 'Rock Salt', cursive;
-    justify-self: flex-end;
-}
-
-.signature h3 {
-    transform: rotate(-15deg);
-    padding-right: 15px;
 }
 
 @media screen and (max-width:505px) {
