add github pages and fix scroll

--- a/src/Components/Start/Start.scss
+++ b/src/Components/Start/Start.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
+    overflow: hidden;
 
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
