--- a/src/Components/Project-detail/Project-detail.scss
+++ b/src/Components/Project-detail/Project-detail.scss
@@ -43,12 +43,15 @@
 
         .images-container {
             display: flex;
+            justify-content: center;
+            align-items: center;
             width: 50%;
             padding: 20px;
             padding-top: 3em;
 
             img {
                 width: 100%;
+                height: fit-content;
             }
         }
 
@@ -148,7 +151,7 @@
             padding: 15px 15px 25px 15px;
 
             img {
-                width: 100%;
+                width: 100%;                
             }
         }   
     }
