--- a/src/pages/projects/ProjectsPage.scss
+++ b/src/pages/projects/ProjectsPage.scss
@@ -1,18 +1,15 @@
 .project {
     width: 100%;
     height: 100%;
-    background-color: red;
-    display: inline-grid;
-    grid-template-columns: auto auto auto;
+    padding: 2rem;
+    box-sizing: border-box;
 
-    &-card {
-        background-color: rgba(44, 44, 44, 0.9);
-        border-radius: 12px;
-        box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
-        -webkit-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
-        padding: 1rem;
+    &-container {
+        width: 100%;
+        height: 100%;
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
+        gap: 25px;
     }
 }
