--- a/src/pages/project-detail/ProjectDetailPage.scss
+++ b/src/pages/project-detail/ProjectDetailPage.scss
@@ -1,3 +1,5 @@
+@use '../../assets/styles/breakpoints.scss' as b;
+
 .info {
   width: 100%;
   box-sizing: border-box;
@@ -7,8 +9,37 @@
   align-items: center;
   height: 95vh;
   flex-direction: column;
+
+  @include b.small {
+    padding: 2rem 0;
+    height: auto;
+    min-height: 95vh;
+  }
+
+
   &-logo {
-    width: 25%;
+    width: 215px;
+    @include b.small {
+      width: 90%;
+    }
+
+    &-container {
+      position: relative;
+    }
+
+    &-arrow {
+      position: absolute;
+      top: 0;
+      left: -25px;
+
+      @include b.mobile {
+        top: 30%;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
+    }
   }
 
   &-description,
@@ -18,7 +49,7 @@
 
   &-links {
     display: flex;
-    gap: 10px;
+    gap: 15px;
 
     &-item {
       display: flex;
@@ -58,7 +89,7 @@
         
         &::before {
             content: '';
-            background-color: rgba(44, 44, 44, 0.9);
+            background-color: rgb(27, 25, 25);
             box-shadow: 5px 4px 8px -3px rgba(0,0,0,0.54);
             -webkit-box-shadow: 5px 4px 8px -3px rgba(0,0,0,0.54);
             -moz-box-shadow: 5px 4px 8px -3px rgba(0,0,0,0.54);
