--- a/src/components/form/FormComponent.scss
+++ b/src/components/form/FormComponent.scss
@@ -25,5 +25,9 @@
         @include b.small {
             width: 100%;
           }
+
+          &.disabled {
+            opacity: 0.7;
+          }
     }
 }
