Use formik to contact form

--- a/src/pages/contact/ContactPage.scss
+++ b/src/pages/contact/ContactPage.scss
@@ -46,6 +46,10 @@
     }
     &-form-container {
       flex: 1;
+
+      p {
+        transition: all 5ms;
+      }
       // background: gray;
     }
   }
