--- a/src/components/form/FormComponent.scss
+++ b/src/components/form/FormComponent.scss
@@ -5,6 +5,11 @@
         display: flex;
         flex-direction: column;
         padding: 10px 0;
+
+        &-error {
+            color: var(--error-color, white);
+            font-size: 14px;
+        }
     }
 
     input,
@@ -29,5 +34,9 @@
           &.disabled {
             opacity: 0.7;
           }
+    }
+
+    button[type="submit"]:disabled {
+            opacity: 0.5;
     }
 }
