--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   --primary-color: #7E2601;
+  --error-color: crimson;
   --accent-color: #a2c11c;
   --primary-color-text: #FFFFFF;
   --primary-color-text-hover: rgb(223, 223, 223);
