--- a/src/pages/skills/SkillsPage.scss
+++ b/src/pages/skills/SkillsPage.scss
@@ -69,7 +69,7 @@
         }
 
         &.active {
-          background: var(--accent-color, #fff);
+          background: var(--primary-color, #fff);
         }
       }
     }
