--- a/src/layout/menu/MenuComponent.scss
+++ b/src/layout/menu/MenuComponent.scss
@@ -19,7 +19,7 @@
 
     &-item {
         gap: 10px;
-        background-color: #CCCCCC;
+        background-color: var(--menu-bg-color, white);
         color: var(--primary-color-text, #000);
         text-decoration: none;
         padding: 15px 10px;
@@ -29,11 +29,11 @@
         align-items: center;
         border-radius: 0 8px 8px 0; 
         box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: 3px 4px 10px 0px rgba(0, 0, 0, 0.75);
         
         &-icon {
-            color: #4a5908;
+            color: var(--accent-color, black);
         }
              
         @include b.mobile {
@@ -55,7 +55,7 @@
         }
 
         &.active {
-            background-color: var(--accent-color, #454545);
+            background-color: var(--primary-color, #454545);
             .menu-item-title {
                 display: block;
             }
