--- a/src/pages/contact/ContactPage.scss
+++ b/src/pages/contact/ContactPage.scss
@@ -81,3 +81,19 @@
     }
   }
 }
+
+
+footer {
+  @include b.small {
+      position: relative;
+  }
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  text-align: right;
+  width: 100%;
+  padding: 15px;
+  box-sizing: border-box;
+  color: #DEDEDE;
+  opacity: 0.5;
+}
