--- a/src/pages/about-me/AboutMePage.scss
+++ b/src/pages/about-me/AboutMePage.scss
@@ -27,7 +27,8 @@
     h2 {
         font-size: 2rem;
         margin: 1rem 0;
-
+        color: var(--primary-color, white);
+        
         @include b.medium {
             font-size: 4vw;
         }
