--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-splash></app-splash>
+<!-- <app-splash></app-splash> -->
+<div class="app">
+    @for (item of itemLists; track $index) {
+        <app-card-list [itemList]="item" ></app-card-list>
+    }
+</div>
