--- a/src/index.css
+++ b/src/index.css
@@ -1,41 +1,30 @@
-:root {
-  font-family: 'Ubuntu', Inter, sans-serif;
+@import "tailwindcss";
 
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-  --primary-color: #DA4167;
-  --accent-color: #DFBBB1;
-  --error-color: crimson;
-  --menu-bg-color: #424B54;
-  --primary-color-text: #FFFFFF;
-  --primary-color-text-hover: rgb(223, 223, 223);
-  --font-family: font-family: 'Ubuntu', Inter, sans-serif;
+@theme static {
+  --color-background: #202020;
+  --color-primary: #3D365C;
+  --color-secondary: #7C4585;
+  --color-accent: #7C4585;
+  --color-warn: #F8B55F;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-}
+    margin: 0;
+    padding: 0;
+    color: #FFFFFF;
+    box-sizing: border-box;
+    font-family: "Inconsolata", monospace;
+    background-color: var(--color-background);
+  }
+  
+  
+  h1 {
+    font-family: "Jersey 25", sans-serif;
+  }
 
-.primary-button {
-  background: var(--primary-color, #FFFFFF);
-  color: var(--primary-color-text, #000);
-  border: none;
-  padding: 0.7rem 2rem;
-  border-radius: 8px;
-  font-size: medium;
-}
-
-.primary-button:hover {
-  cursor: pointer;
-}
+  #footer.extended > div {
+    flex-direction: column;
+  }
+  #footer.extended > div p {
+    display: block;
+  }
